--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -1,3 +1,16 @@
 .navbar {
   background-color: #150a33;
 }
+
+.navbar-icon {
+  height: 40px;
+  width: 40px;
+}
+
+.nav-menu-button:hover {
+  color: #f54449;
+}
+
+a:hover {
+  color: #f54449;
+}
