--- a/src/styles/tailwind.scss
+++ b/src/styles/tailwind.scss
@@ -8,6 +8,8 @@
 
 @import "img";
 
+@import "navbar";
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
